# molecule-digitalocean

./: .pre-commit-config.yaml  .yamllint  README.rst  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: release.yml  tox.yml
molecule_digitalocean/: driver.py
molecule_digitalocean/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: INSTALL.rst  create.yml  destroy.yml  prepare.yml
molecule_digitalocean/test/scenarios/driver/digitalocean/molecule/default/: molecule.yml
molecule_digitalocean/test/scenarios/driver/digitalocean/molecule/multi-node/: molecule.yml
molecule_digitalocean/test/unit/driver/: test_digitalocean.py
src/molecule_digitalocean/: __init__.py  driver.py
src/molecule_digitalocean/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: INSTALL.rst  prepare.yml
src/molecule_digitalocean/playbooks/: create.yml  destroy.yml
src/molecule_digitalocean/test/scenarios/driver/digitalocean/molecule/default/roles/molecule/tasks/: main.yml
src/molecule_digitalocean/test/scenarios/driver/digitalocean/molecule/default/tests/: test_default.py
src/molecule_digitalocean/test/scenarios/driver/digitalocean/molecule/multi-node/: __init__.py
src/molecule_digitalocean/test/scenarios/driver/digitalocean/molecule/multi-node/tests/: test_default.py
src/molecule_digitalocean/test/unit/driver/: test_digitalocean.py
