[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-digitalocean
url = https://github.com/pycontribs/molecule-digitalocean
project_urls =
    Bug Tracker = https://github.com/pycontribs/molecule-digitalocean/issues
    Release Management = https://github.com/pycontribs/molecule-digitalocean/projects
    CI = https://github.com/ansible-community/molecule-digitalocean/actions
    Source Code = https://github.com/pycontribs/molecule-digitalocean
description = digitalocean Molecule Plugin :: run molecule tests on digitalocean
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    digitalocean

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    molecule >= 3.0
    pyyaml >= 5.1

[options.extras_require]
test =
    flake8>=3.6.0

    mock>=3.0.5
    pytest>=4.6.3
    pytest-cov>=2.7.1
    pytest-helpers-namespace>=2019.1.8
    pytest-mock>=1.10.4
    pytest-xdist>=1.29.0
    pytest-dependency

[options.entry_points]
molecule.driver =
    digitalocean = molecule_digitalocean.driver:DigitalOcean

[options.packages.find]
where = src
